docs/book/samples/appa/binding_after_effect_check.kso
main =
  print "steeping"
  cups = 4
  >> print "serving {cups}"
